# cxxplug

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  output_layout.cmake
include/: CMakeLists.txt  cxxplug.hpp
include/cxxplug/: i18n_provided.hpp  load_candidate.hpp  plug_loaded.hpp  uuid.hpp
include/cxxplug/some_load_providers/: libload_provider.hpp
include/cxxplug/some_source_providers/: filesystem_dynlib_provider.hpp
scripts/: CMakeLists.txt  cxxplug_gen.cmake  cxxplug_get_project_targets.cmake
src/: CMakeLists.txt
tests/: CMakeLists.txt
tests/overview/: CMakeLists.txt
tests/overview/include/plugins/: plugin_human.h
tests/overview/plugins/: CMakeLists.txt
tests/overview/plugins/plugin_human/: CMakeLists.txt  cxxplug_interface.conf
tests/overview/plugins/plugin_human/gregor_eisenhorn/: gregor_eisenhorn.c
tests/overview/plugins/plugin_human/ivan_susanin/: ivan_susanin.c
tests/overview/plugins/plugin_human/vasiliy_pupkin/: vasiliy_pupkin.c
tests/overview/src/: CMakeLists.txt  main.cpp
tools/: CMakeLists.txt  cxxplug_gen_collected_proxies.cpp  cxxplug_gen_interface.cpp  cxxplug_gen_proxy.cpp  cxxplug_hide_linked_symbols.cpp  cxxplug_hide_symbols.cpp  cxxplug_print_unwanted_symbols.cpp
tools/common/: generation_utils.cpp  generation_utils.hpp  parse_config.cpp  parse_config.hpp  predefined_symbols.cpp  predefined_symbols.hpp  symbols_serialization.hpp
tools/cxxplug_gen_collected_proxies/: args.hpp  gen_collection.cpp  gen_collection.hpp
tools/cxxplug_gen_interface/: args.hpp  gen_interface.cpp  gen_interface.hpp  get_filepath.cpp  get_filepath.hpp
tools/cxxplug_gen_proxy/: args.hpp  gen_proxy.cpp  gen_proxy.hpp
tools/cxxplug_hide_linked_symbols/: args.hpp  get_symbols.cpp  get_symbols.hpp  hide_symbols.cpp  hide_symbols.hpp
tools/cxxplug_hide_symbols/: args.hpp  hide_symbols.cpp  hide_symbols.hpp
tools/cxxplug_print_unwanted_symbols/: args.hpp  get_symbols.cpp  get_symbols.hpp
